# Pugmarks

./: .env.example  .gitignore  README.md  STATUS.md  app.py  pyproject.toml  requirements.txt
docs/superpowers/plans/: 2026-05-01-pugmark-v1.md  2026-05-18-pugmark-v2.md
docs/superpowers/specs/: 2026-05-01-pugmark-design.md  2026-05-18-pugmark-v2-universal-design.md
eval/: auto_label.py  metrics.py  runner.py
prompts/: book_analyzer.v1.j2  book_type_classifier.v1.j2  extract_people.v1.j2  extract_places.v1.j2  extract_taxa.v1.j2  judge_people.v1.j2  judge_places.v1.j2  judge_taxa.v1.j2  summarize_in_book.v1.j2
pugmark/: __init__.py  analyzer.py  api.py  cache.py  chunking.py  cli.py  enrich.py  entity_registry.py  entity_type.py  extract.py  image_gen.py  ingest.py  llm.py  observability.py  pdf_export.py  prompt_registry.py  prompts_cli.py  render.py  schema_realizer.py  schemas.py  validate.py
pugmark/templates/: gallery.html.j2
tests/: conftest.py  test_analyzer.py  test_app.py  test_auto_label.py  test_cache.py  test_chapter_kind.py  test_chunking.py  test_cli.py  test_enrich.py  test_entity_registry.py  test_entity_type.py  test_eval_metrics.py  test_eval_runner.py  test_extract.py  test_image_gen.py  test_ingest.py  test_integration_v2.py  test_library_api.py  test_llm.py  test_observability.py  test_prompt_registry.py  test_readme.py  test_render.py  test_schema_realizer.py  test_schemas.py  test_validate.py  test_validate_tiered.py
tests/fixtures/: _make_fixture_pdf.py
tests/fixtures/commons_responses/: tiger_image.json
(+3 files in other folders)
