[project]
name = "pugmark"
version = "0.1.0"
description = "Turn hunting and natural-history novels into illustrated, evaluated bestiaries"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Ansumanbhujabal", email = "ansumanbhujabal1@gmail.com" }
]
dependencies = [
    "pydantic>=2.6",
    "pymupdf>=1.24",
    "litellm>=1.40",
    "httpx>=0.27",
    "rapidfuzz>=3.6",
    "jinja2>=3.1",
    "click>=8.1",
    "gradio>=4.40",
    "langfuse>=2.40,<3",
    "python-dotenv>=1.0",
]

[project.scripts]
pugmark = "pugmark.cli:cli"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "deepeval>=0.21",
    "ruff>=0.4",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
